profile page click jump bug fixed

--- a/src/pages/profile/activities/ProfileActivities.module.scss
+++ b/src/pages/profile/activities/ProfileActivities.module.scss
@@ -31,6 +31,7 @@
 
 .container {
   display: flex;
+  min-height: 100%;
 
   @include responsive('phone', 'phone-xs') {
     flex-direction: column;
